# profile-data-scraper

./: README.md  pyproject.toml
getprog/: cassandra_connection.py  last_id.txt  requests_.py  restart_for_windows.ps1  restart_script.sh  restart_script_linux.sh  scraper.py  utils.py
getprog/getprog/: getprog_data_with_Threads.py  scraper.py
