[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["mohamedhajja <mohamedhajja22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
cassandra-driver = "^3.29.0"
requests = "^2.31.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
